--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -66,13 +66,31 @@
     transition: all 0.3s;
   }
   
-  .signin:hover {
+  .signin:hover{
     background-color: rgb(230, 72, 72);
+    cursor: pointer;
+  }
+  .signingit{
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: rgb(24, 24, 24);
+    color: #fff;
+    transition: all 0.3s;
+  }
+  .signingit:hover {
+    background-color: rgb(0, 0, 0);
     cursor: pointer;
   }
   .signinbox{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:20px;
+  }
+  .fasign{
+    display: flex;
     align-items: center;
     justify-content: center;
     gap:20px;
