--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -12,7 +12,8 @@
     border:2px solid black;
     border-radius: 30px 30px 30px 30px;
     margin-right:13px;
-    color:black;
+    background-color: #fff;
+    color:rgb(0, 0, 0);
     cursor: pointer;
     text-align: center;
     text-decoration: none;
@@ -77,4 +78,11 @@ margin-bottom: 75px;
 .button:hover{
     background-color: #00a2ff;
     color:black;
+}
+.HomePageHeader .register{
+    color:#fff;
+    background-color: #523d93;
+}
+.HomePageHeader .register:hover{
+    background-color: #8212f5;
 }
