--- a/src/features/features-A/components/Header/ui/Header.module.css
+++ b/src/features/features-A/components/Header/ui/Header.module.css
@@ -21,7 +21,7 @@
     border-radius: 20px;
     cursor: pointer;
 }
-.header input{
+.header .inputsearch{
     outline: none;
     border:none;
     margin-right: 10px;
@@ -82,6 +82,7 @@
   .bell{
     font-size:30px;
     margin-left:25px;
+    cursor: pointer;
   }
 
   .headernavbar a {
@@ -90,4 +91,50 @@
   }
   .headernavbar h2{
     cursor: pointer;
+  }
+  .isBell{
+    position: absolute;
+    top: 55px;
+    right: 20px;
+    background-color: #fff;
+    border: 1px solid #e9e9e9;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    color:#000;
+    width:300px;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+  }
+  .isBell .bsbell{
+    width:200px;
+    height: 300px;
+  }
+  .isBell p{
+    font-size:25px;
+  }
+  .isCreate{
+    position: absolute;
+    top: 55px;
+   left:430px;
+    background-color: #fff;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    color:#000;
+    width:300px;
+    height: 650px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index:3;
+    gap:20px;
+  }
+  .imageBoard{
+    width:220px;
+    height: 120px;
   }
