--- a/src/entities/List/List.css
+++ b/src/entities/List/List.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content:space-between ;
     padding:20px;
-  margin-left:550px;
+
   }
   
   html,body{
@@ -44,4 +44,26 @@
   .button button:hover{
     background-color: #cecece;
     border-radius:5px;
+  }
+
+
+
+
+
+  .container .dashboard {
+    width: calc(100vw - 300px);
+    position: fixed;
+    display: inline-block;
+    background: var(--bg-primary-theme);
+  }
+  
+  .dashboard h1 {
+    text-align: left;
+  }
+  
+  .board {
+    background: var(--bg-primary-color);
+
+    display: flex;
+    margin-left:40px;
   }
