--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,10 @@
-@import "themes/dark.scss";
-@import "themes/normal.scss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
 @import "reset.scss";
 @import "variables/global.scss";
-
+@import "themes/light.scss";
+@import "themes/dark.scss";
+@import "themes/purple.scss";
+@import "themes/blue.scss";
+@import "themes/green.scss";
+@import "themes/yellow.scss";
 
