--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,8 +1,15 @@
 :root {
-    --color-dark: #242424;
-    --color-primary: #108ee9;
-    
-}
-html {
-    scroll-behavior: smooth;
+  --font-famaly-main: "roboto", sans-serif;
+
+  --font-size-s: 12px;
+  --font-line-s: 16px;
+  --font-s: var(--font-size-s) / var(--font-line-s) var(--font-famaly-main);
+
+  --font-size-m: 16px;
+  --font-line-m: 24px;
+  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-famaly-main);
+
+  --font-size-l: 24px;
+  --font-line-l: 32px;
+  --font-l: var(--font-size-l) / var(--font-line-l) var(--font-famaly-main);
 }
