--- a/src/pages/BoardsPage/ui/Boards.module.css
+++ b/src/pages/BoardsPage/ui/Boards.module.css
@@ -1,7 +1,8 @@
 .table{
     width:100%;
     height: 92vh;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(255, 255, 255);
+    padding-left:10px;
     
 }
 .tablenavbar{
