--- a/src/entities/List/List.module.css
+++ b/src/entities/List/List.module.css
@@ -46,23 +46,19 @@
     border-radius:5px;
   }
 
-
-
-
-
-  .container .dashboard {
+  .Tableboard {
     width: calc(100vw - 300px);
     position: fixed;
     display: inline-block;
-    background: var(--bg-primary-theme);
+margin-left:250px;
   }
   
-  .dashboard h1 {
+  .Tableboard h1 {
     text-align: left;
   }
   
   .board {
-    background: var(--bg-primary-color);
+ 
 
     display: flex;
     margin-left:40px;
