--- a/src/entities/MainCard/ui/MainCard.module.css
+++ b/src/entities/MainCard/ui/MainCard.module.css
@@ -73,9 +73,49 @@
     height: 34px;
     padding: 5px;
     border-radius: 5px;
+    background-color: none;
 }
 
 .allBtn:hover {
     cursor: pointer;
     background:rgb(155, 153, 153);
+}
+.isTemplate{
+    position: relative;
+  top:-120px;
+ left:300px;
+  background-color: #c6c6c6;
+  border: 1px solid #e9e9e9;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  color: #000;
+  width: 300px;
+  height: 190px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+}
+.input {
+    padding:15px 25px;
+    border-radius: 5px;
+    border:1px solid #bcacac;
+    margin-bottom:7px;
+}
+.isTemplate button{
+    border:none;
+    width:220px;
+    border-radius: 7px;
+}
+.isTemplate button:hover{
+    background-color: #a3a3a3;
+}
+.isTemplate p:hover{
+    cursor:pointer;
+    background-color: #dad9d9;
+    border-radius: 5px;
+}
+.input:hover{
+    background-color: #f6f0f0;
 }
