--- a/src/entities/Modal/ui/Modal.module.css
+++ b/src/entities/Modal/ui/Modal.module.css
@@ -1,28 +1,31 @@
 .modal {
-    padding: 20px;
-    background-color: #e4e4e4;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 300px;
-    min-height: 200px;
-    color: #000;
-    position: absolute;
-    top:40px;
-left:740px;
+  padding: 20px;
+  background-color: #e4e4e4;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 300px;
+  min-height: 200px;
+  color: #000;
+  position: absolute;
+  top: 10px;
+  left: 420px;
+  z-index: 3;
 }
 
 .modal h1 {
-    margin-bottom: 20px;
-    border-bottom: 1px solid #000;
-    padding-bottom: 10px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #000;
+  padding-bottom: 10px;
 }
+
 .modalbg {
-    background-color: #707070;
-    position: absolute;
-    top: 0;
-    left:0;
-    width: 100vw;
-    height: 100vh;
+  background-color: #555555;
+  position: absolute;
+  left: -250px;
+  top: 0;
+  width: 1850px;
+  height: 1500px;
   opacity: 0.9;
-    cursor: pointer;
-  }
+  cursor: pointer;
+  z-index: 2;
+}
