--- a/src/features/features-A/components/Header/ui/Header.module.css
+++ b/src/features/features-A/components/Header/ui/Header.module.css
@@ -180,3 +180,8 @@
   background-color: #a4a4a4;
   color:#fff;
 }
+.person{
+  border:1px solid #fff;
+  border-radius: 50%;
+  padding:5px 10px;
+}
