--- a/src/entities/Card/ui/Card.module.css
+++ b/src/entities/Card/ui/Card.module.css
@@ -1,41 +1,51 @@
-.card {
-background:rgb(255, 255, 255) !important;
-    padding: 10px !important;
-    border-radius: 6px;
-    margin: 5px 0;
-    color:#000;
-}
-
-.card:hover {
+.icon{
+    border: none;
     cursor: pointer;
-    outline: 2px solid #000000;
+    background: none;
+    color: #2f3133;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 3px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+.bbutton:hover{
+    background-color: #282F27;
 }
 
-.cardActions {
-    display: block;
-    height:35px;
-    padding-top: 5px;
-}
-
-.btn {
-    float: left;
-    height: 34px;
-    padding: 5px;
+.taskName input{
+    margin-top: 5px;
+    border: 1px solid black;
+    color: rgb(0, 0, 0);
+    width:200px;
     border-radius: 5px;
 }
 
-.btn:hover {
-    cursor: pointer;
-    background: #e6e6e6;
+
+
+.taskName button p{
+padding-bottom: 8px;
+
 }
 
-.btn span {
-    display: inline-block; 
-    padding-left: 5px;
+.taskName{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.btn svg {
-    display: inline-block; 
-    height: 16px;
-    width: 16px;
+.box{
+    background-color: #fff;
+    color:#000;
+    padding:5px 10px;
+    border:1px solid black;
+    border-radius:5px;
+    margin-bottom:10px;
+    font-size:22px;
+   width:100%;
+   gap:150px;
+
+
 }
