--- a/src/entities/MainCard/ui/MainCard.module.css
+++ b/src/entities/MainCard/ui/MainCard.module.css
@@ -39,19 +39,21 @@
 }
 
 .actions {
-    display: block;
-    height: 54px;
+    display: flex;
+    gap: 100px;
+    height: 36px;
     padding-top: 5px;
+    width:220px;
 }
 
-.addBtn {
+.addButton {
     float: left;
     height: 34px;
     padding: 5px;
     border-radius: 5px;
 }
 
-.addBtn:hover {
+.addButton:hover {
     cursor: pointer;
     background:rgb(155, 153, 153);
 }
@@ -83,7 +85,7 @@
 .isTemplate{
     position: relative;
   top:-120px;
- left:300px;
+left:-80px;
   background-color: #c6c6c6;
   border: 1px solid #e9e9e9;
   border-radius: 10px;
@@ -97,12 +99,7 @@
   flex-direction: column;
   cursor: pointer;
 }
-.input {
-    padding:15px 25px;
-    border-radius: 5px;
-    border:1px solid #bcacac;
-    margin-bottom:7px;
-}
+
 .isTemplate button{
     border:none;
     width:220px;
@@ -118,4 +115,30 @@
 }
 .input:hover{
     background-color: #f6f0f0;
+}
+.addButton{
+    background: none;
+    color:#fff;
+    width:150px;
+    border:1px solid #fff;
+}
+.iconsX{
+    background: none;
+  width:150px;
+
+}
+.addSave{
+    display: flex;
+}
+.addNew{
+    display: flex;
+    gap:5px;
+}
+.addNew input{
+    width:130px;
+    margin-bottom:5px;
+    padding:15px 0;
+}
+.allBtn{
+    margin-bottom:15px;
 }
