--- a/src/pages/RegisterPage/ui/RegisterPage.module.css
+++ b/src/pages/RegisterPage/ui/RegisterPage.module.css
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 
 }
 .Register input {
