--- a/src/pages/TablePage/ui/TablePage.module.css
+++ b/src/pages/TablePage/ui/TablePage.module.css
@@ -2,6 +2,7 @@
     width:100%;
     height: 92.8vh;
     background-color: rgb(212, 195, 189);
+    display: flex;
     
 }
 .tablenavbar{
@@ -27,3 +28,83 @@
     display: flex;
 
 }
+
+.listGroup {
+    width: 83vw;
+  
+  }
+  
+  .addList {
+    width: 300px;
+    height: 60px;
+    margin: 20px;
+    border-radius: 15px;
+    text-align: left;
+position: relative;
+left:1050px;
+    border: none;
+    background-color: #757a7f;
+    color: aliceblue;
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.3) 
+  }
+  
+  
+  .addList:hover {
+    background: rgba(255, 255, 255, 0.1)
+  }
+  
+  .appContainer {
+    display: flex;
+  }
+  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(217, 153, 153, 0.5); /* Adjust the transparency as needed */
+  }
+  
+  .addNewList{
+    padding: 0;
+    margin: 0;
+    position: relative;
+    margin: 0px 17px;
+    margin-top: 20px;
+    background-color: #101204;
+    width: 300px;
+    border-radius: 20px;
+    height: min-content;
+    display: flex;
+    flex-direction: column;
+    left:1050px;
+  }
+  .addNewList input{
+    background-color: #323231;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    font-size: 15px;
+    display: block;
+    margin: 10px 10px 0px 10px;
+  }
+  .addNewList button{
+    background-color: #5e96e5;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    min-width: 115px;
+    margin: 10px;
+  }
+  .addNewList button:hover{
+    background-color: #64a0f4;
+  
+  }
+  .modal{
+    width:300px;
+    height:200px;
+  }
