--- a/src/features/features-A/components/Header/ui/Header.module.css
+++ b/src/features/features-A/components/Header/ui/Header.module.css
@@ -186,3 +186,9 @@ z-index:3;
   border-radius: 50%;
  
 }
+.gradient{
+  font-size:35px;
+  border:1px solid #fff;
+  border-radius: 50%;
+  padding:3px;
+}
