--- a/src/entities/Comment/ui/Comment.module.css
+++ b/src/entities/Comment/ui/Comment.module.css
@@ -45,3 +45,13 @@
  background-color: rgb(95, 87, 87);
     border-radius: 5px;
 }
+.image{
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.info{
+    display: flex;
+    align-items: center;
+    gap:30px;
+}
